logs/watchdog_20251012_1630.log
[12/10/2025 16:30:01,67] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025 16:30:01,90] END WATCHDOG 
